--- a/www/index.html
+++ b/www/index.html
@@ -1,9 +1,18 @@
-<!DOCTYPE html>
-<html>
+<!doctype html>
+<html lang="en">
     <head>
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link type="text/css" rel="stylesheet" href="css/site.css">
         <title>จำนง jamnong</title>
     </head>
     <body>
-        <h1>จำนง jamnong</h1>
+        <div  class="container">
+            <div class="row">
+                <div class="col-xs-12">
+                    <h1>จำนง jamnong</h1>
+                </div>
+            </div>
+        </div>
     </body>
 </html>
