--- a/www/index.html
+++ b/www/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="en" ng-app>
     <head>
         <script data-main="lib/main" src="lib/require.js"></script>
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
