Chagne HTML title.

--- a/www/index.html
+++ b/www/index.html
@@ -5,13 +5,13 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link type="text/css" rel="stylesheet" href="css/site.css">
-        <title>จำนง jamnong</title>
+        <title>Beanbag template for AngularJS</title>
     </head>
     <body>
         <div  class="container">
             <div class="row">
                 <div class="col-xs-12">
-                    <h1>จำนง jamnong</h1>
+                    <h1>Beanbag template for AngularJS</h1>
                 </div>
             </div>
         </div>
