Make the content editable.

--- a/www/index.html
+++ b/www/index.html
@@ -40,6 +40,24 @@
                             </div>
                         </form>
                     </h1>
+                    <div class="row">
+                        <div class="col-xs-12"
+                                ng-class="{'col-md-6': controller.homepage.editing}">
+                            <div class="pull-left"
+                                    ng-hide="controller.homepage.editing">
+                                <i class="glyphicon glyphicon-pencil"
+                                    ng-click="controller.homepage.editing=true"></i>
+                            </div>
+                            {{ controller.html() }}
+                        </div>
+                        <div class="col-xs-12" ng-show="controller.homepage.editing"
+                                ng-class="{'col-md-6': controller.homepage.editing}">
+                            <form role="form" ng-submit="controller.save()">
+                                <textarea class="form-control" rows="15"
+                                    ng-model="homepage.content"></textarea>
+                            </form>
+                        </div>
+                    </div>
                 </section>
             </div>
         </div>
